# python-template

./: .flake8  .gitignore  README.md  main.py  pyproject.toml
dev/: bootstrap.sh  format.sh  test.sh  uv-install.sh
docker/: Dockerfile
src/my_python_project/: __init__.py  app.py  conftest.py  test_app.py
src/thc_backend_server/: __init__.py  app.py  logger.py
tests/: conftest.py  test_app.py  test_logger.py
